public/javascript/parser.js
pl0 = (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { st: peg$parsest },
        peg$startRuleFunction  = peg$parsest,

        peg$c0 = function(id, params, returns, block) { return { fType: 'function',
                 			fId : id,
                            fParams: params,
                            fBlock: block,
                            fReturns: returns
                         }; },
        peg$c1 = function(p1, r) {
           		let rest = p1? [p1] : [];
                  rest = rest.concat(r.map(([_, param]) => param));
           		return rest;
              },
        peg$c2 = function(type, id) { return { type: type, value: id};},
        peg$c3 = function(s1, r) {
                    let t = [];
                    if (s1) t.push(s1);
                    return {
                    type: 'COMPOUND', // Chrome supports destructuring
                    children: t.concat(r.map( ([_, st]) => st ))
                    };
                  },
        peg$c4 = function(e, st, sf) {
                     return { type: 'SI NO', condition:  e, if_true: st, if_false: sf };
                   },
        peg$c5 = function(e, st) {
                     return { type: 'SI', condition:  e, if_true: st };
                   },
        peg$c6 = function(e, st) {
                     return { type: 'MIENTRAS', condition: e, block: st };
                   },
        peg$c7 = function(e, c, st) {
                     return { type: "PARA", desde: e, hasta: c, hacer: st};
                   },
        peg$c8 = function(a) {
                     return { type: 'DEV', children: a? [a] : [] };
                   },
        peg$c9 = function(i, e) {
                     return {type: '=', left: i, right: e};
                   },
        peg$c10 = function(l, op, r) { return { type: op, left: l, right: r} },
        peg$c11 = function(t, r) { return tree(t,r); },
        peg$c12 = function(f, r) { return tree(f,r); },
        peg$c13 = function(t) { return t; },
        peg$c14 = /^[ \n\t\r]/,
        peg$c15 = { type: "class", value: "[ \\n\\t\\r]", description: "[ \\n\\t\\r]" },
        peg$c16 = /^[a-zA-Z0-9_]/,
        peg$c17 = { type: "class", value: "[a-zA-Z0-9_]", description: "[a-zA-Z0-9_]" },
        peg$c18 = function(id) {
                String.prototype.replaceAll = function(search, replacement) {
            		var target = this;
            		return target.split(search).join(replacement);
        		};
        		return { type: 'ID', value: id.join().replaceAll(",","")} },
        peg$c19 = "(",
        peg$c20 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c21 = ")",
        peg$c22 = { type: "literal", value: ")", description: "\")\"" },
        peg$c23 = ",",
        peg$c24 = { type: "literal", value: ",", description: "\",\"" },
        peg$c25 = "{",
        peg$c26 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c27 = ";",
        peg$c28 = { type: "literal", value: ";", description: "\";\"" },
        peg$c29 = "}",
        peg$c30 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c31 = "=",
        peg$c32 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c33 = function() { return "=" },
        peg$c34 = /^[+\-]/,
        peg$c35 = { type: "class", value: "[+-]", description: "[+-]" },
        peg$c36 = function(op) { return op; },
        peg$c37 = /^[*\/]/,
        peg$c38 = { type: "class", value: "[*/]", description: "[*/]" },
        peg$c39 = /^[0-9]/,
        peg$c40 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c41 = function(digits) { return { type: 'NUM', value: parseInt(digits, 10) }; },
        peg$c42 = "==",
        peg$c43 = { type: "literal", value: "==", description: "\"==\"" },
        peg$c44 = "!=",
        peg$c45 = { type: "literal", value: "!=", description: "\"!=\"" },
        peg$c46 = "<=",
        peg$c47 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c48 = ">=",
        peg$c49 = { type: "literal", value: ">=", description: "\">=\"" },
        peg$c50 = "<",
        peg$c51 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c52 = ">",
        peg$c53 = { type: "literal", value: ">", description: "\">\"" },
        peg$c54 = "#",
        peg$c55 = { type: "literal", value: "#", description: "\"#\"" },
        peg$c56 = /^[ a-zA-Z0-9]/,
        peg$c57 = { type: "class", value: "[ a-zA-Z0-9]", description: "[ a-zA-Z0-9]" },
        peg$c58 = function() { return "COMENTARIO"; },
        peg$c59 = "fun ",
        peg$c60 = { type: "literal", value: "fun ", description: "\"fun \"" },
        peg$c61 = function() { return "fun" },
        peg$c62 = "ffun",
        peg$c63 = { type: "literal", value: "ffun", description: "\"ffun\"" },
        peg$c64 = function() { return "ffun" },
        peg$c65 = "dev ",
        peg$c66 = { type: "literal", value: "dev ", description: "\"dev \"" },
        peg$c67 = function() { return "dev" },
        peg$c68 = "int",
        peg$c69 = { type: "literal", value: "int", description: "\"int\"" },
        peg$c70 = function() { return "int" },
        peg$c71 = "double",
        peg$c72 = { type: "literal", value: "double", description: "\"double\"" },
        peg$c73 = function() { return "double" },
        peg$c74 = "float",
        peg$c75 = { type: "literal", value: "float", description: "\"float\"" },
        peg$c76 = function() { return "float" },
        peg$c77 = "bool",
        peg$c78 = { type: "literal", value: "bool", description: "\"bool\"" },
        peg$c79 = function() { return "bool" },
        peg$c80 = "string",
        peg$c81 = { type: "literal", value: "string", description: "\"string\"" },
        peg$c82 = function() { return "string" },
        peg$c83 = "si ",
        peg$c84 = { type: "literal", value: "si ", description: "\"si \"" },
        peg$c85 = function() { return "si" },
        peg$c86 = "si_no",
        peg$c87 = { type: "literal", value: "si_no", description: "\"si_no\"" },
        peg$c88 = function() { return "si no" },
        peg$c89 = "fsi",
        peg$c90 = { type: "literal", value: "fsi", description: "\"fsi\"" },
        peg$c91 = function() { return "fsi" },
        peg$c92 = "mientras ",
        peg$c93 = { type: "literal", value: "mientras ", description: "\"mientras \"" },
        peg$c94 = function() { return "mientras" },
        peg$c95 = "hacer",
        peg$c96 = { type: "literal", value: "hacer", description: "\"hacer\"" },
        peg$c97 = function() { return "hacer" },
        peg$c98 = "para ",
        peg$c99 = { type: "literal", value: "para ", description: "\"para \"" },
        peg$c100 = function() { return "para" },
        peg$c101 = "hasta ",
        peg$c102 = { type: "literal", value: "hasta ", description: "\"hasta \"" },
        peg$c103 = function() { return "hasta" },
        peg$c104 = "fpara",
        peg$c105 = { type: "literal", value: "fpara", description: "\"fpara\"" },
        peg$c106 = function() { return "fpara" },
        peg$c107 = "fmientras",
        peg$c108 = { type: "literal", value: "fmientras", description: "\"fmientras\"" },
        peg$c109 = function() { return "fmientras" },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsest() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parseCOMMENT();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parseCOMMENT();
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsefunction();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parseCOMMENT();
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parseCOMMENT();
          }
          if (s3 !== peg$FAILED) {
            s1 = [s1, s2, s3];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsefunction() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

      s0 = peg$currPos;
      s1 = peg$parseFUN();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseID();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseLP();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseparams();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseRP();
              if (s5 !== peg$FAILED) {
                s6 = peg$parseDEV();
                if (s6 !== peg$FAILED) {
                  s7 = peg$parsetype();
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parseblock();
                    if (s8 !== peg$FAILED) {
                      s9 = peg$parseFFUN();
                      if (s9 !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$c0(s2, s4, s7, s8);
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseparams() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseparam();
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$parseCOMMA();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseparam();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parseCOMMA();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseparam();
            if (s5 !== peg$FAILED) {
              s4 = [s4, s5];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c1(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseparam() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parsetype();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseID();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c2(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsetype() {
      var s0;

      s0 = peg$parseINT();
      if (s0 === peg$FAILED) {
        s0 = peg$parseDOUBLE();
        if (s0 === peg$FAILED) {
          s0 = peg$parseFLOAT();
          if (s0 === peg$FAILED) {
            s0 = peg$parseBOOL();
            if (s0 === peg$FAILED) {
              s0 = peg$parseSTRING();
            }
          }
        }
      }

      return s0;
    }

    function peg$parseblock() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      s1 = peg$parseCL();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseblock();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$currPos;
          s5 = peg$parseSC();
          if (s5 !== peg$FAILED) {
            s6 = peg$parseblock();
            if (s6 !== peg$FAILED) {
              s5 = [s5, s6];
              s4 = s5;
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$currPos;
            s5 = peg$parseSC();
            if (s5 !== peg$FAILED) {
              s6 = peg$parseblock();
              if (s6 !== peg$FAILED) {
                s5 = [s5, s6];
                s4 = s5;
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseCR();
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c3(s2, s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseSI();
        if (s1 !== peg$FAILED) {
          s2 = peg$parsecond();
          if (s2 !== peg$FAILED) {
            s3 = peg$parseHACER();
            if (s3 !== peg$FAILED) {
              s4 = peg$parseblock();
              if (s4 !== peg$FAILED) {
                s5 = peg$parseSINO();
                if (s5 !== peg$FAILED) {
                  s6 = peg$parseblock();
                  if (s6 !== peg$FAILED) {
                    s7 = peg$parseFSI();
                    if (s7 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c4(s2, s4, s6);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseSI();
          if (s1 !== peg$FAILED) {
            s2 = peg$parsecond();
            if (s2 !== peg$FAILED) {
              s3 = peg$parseHACER();
              if (s3 !== peg$FAILED) {
                s4 = peg$parseblock();
                if (s4 !== peg$FAILED) {
                  s5 = peg$parseFSI();
                  if (s5 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c5(s2, s4);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parseMIENTRAS();
            if (s1 !== peg$FAILED) {
              s2 = peg$parsecond();
              if (s2 !== peg$FAILED) {
                s3 = peg$parseHACER();
                if (s3 !== peg$FAILED) {
                  s4 = peg$parseblock();
                  if (s4 !== peg$FAILED) {
                    s5 = peg$parseFMIENTRAS();
                    if (s5 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c6(s2, s4);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              s1 = peg$parsePARA();
              if (s1 !== peg$FAILED) {
                s2 = peg$parseassign();
                if (s2 !== peg$FAILED) {
                  s3 = peg$parseHASTA();
                  if (s3 !== peg$FAILED) {
                    s4 = peg$parseassign();
                    if (s4 !== peg$FAILED) {
                      s5 = peg$parseHACER();
                      if (s5 !== peg$FAILED) {
                        s6 = peg$parseblock();
                        if (s6 !== peg$FAILED) {
                          s7 = peg$parseFPARA();
                          if (s7 !== peg$FAILED) {
                            peg$savedPos = s0;
                            s1 = peg$c7(s2, s4, s6);
                            s0 = s1;
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
              if (s0 === peg$FAILED) {
                s0 = peg$currPos;
                s1 = peg$parseDEV();
                if (s1 !== peg$FAILED) {
                  s2 = peg$parseassign();
                  if (s2 === peg$FAILED) {
                    s2 = null;
                  }
                  if (s2 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c8(s2);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
                if (s0 === peg$FAILED) {
                  s0 = peg$parseassign();
                }
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parseassign() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseID();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseASSIGN();
        if (s2 !== peg$FAILED) {
          s3 = peg$parsecond();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c9(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parsecond();
      }

      return s0;
    }

    function peg$parsecond() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseexp();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseCOMP();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseexp();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c10(s1, s2, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parseexp();
      }

      return s0;
    }

    function peg$parseexp() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseterm();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$parseADD();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseterm();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parseADD();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseterm();
            if (s5 !== peg$FAILED) {
              s4 = [s4, s5];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c11(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseterm() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parsefactor();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$parseMUL();
        if (s4 !== peg$FAILED) {
          s5 = peg$parsefactor();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parseMUL();
          if (s4 !== peg$FAILED) {
            s5 = peg$parsefactor();
            if (s5 !== peg$FAILED) {
              s4 = [s4, s5];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c12(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsefactor() {
      var s0, s1, s2, s3;
